<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/sample_picture"
            android:drawablePadding="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/sample_ui"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/implement1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/g_round_box_bg_selector"
                android:gravity="center"
                android:padding="@dimen/text_padding_10"
                android:text="@string/typography_implement1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"/>

            <TextView
                android:id="@+id/implement2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/g_round_box_bg_selector"
                android:gravity="center"
                android:padding="@dimen/text_padding_10"
                android:text="@string/typography_implement2"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"/>

            <TextView
                android:id="@+id/implement3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/g_round_box_bg_selector"
                android:gravity="center"
                android:padding="@dimen/text_padding_10"
                android:text="@string/typography_implement3"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"/>

            <TextView
                android:id="@+id/implement4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/g_round_box_bg_selector"
                android:gravity="center"
                android:padding="@dimen/text_padding_10"
                android:text="@string/typography_implement4"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/implement5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/g_round_box_bg_selector"
                android:gravity="center"
                android:padding="@dimen/text_padding_10"
                android:text="@string/typography_implement5"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"/>

            <TextView
                android:id="@+id/implement6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/g_round_box_bg_selector"
                android:gravity="center"
                android:padding="@dimen/text_padding_10"
                android:text="@string/typography_implement6"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"/>

            <TextView
                android:id="@+id/implement7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/g_round_box_bg_selector"
                android:gravity="center"
                android:padding="@dimen/text_padding_10"
                android:text="@string/typography_implement7"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/implement8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/g_round_box_bg_selector"
                android:gravity="center"
                android:padding="@dimen/text_padding_10"
                android:text="@string/typography_implement8"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
